# arkenon

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md
artwork/spaceship-01/: spaceship-01.blend
cmake-extras/: FindAlure.cmake
data/models/: fighter.dae  spaceship-01.dae  test.dae
data/shader/: deferred.final.fragment.glsl  deferred.final.vertex.glsl  deferred.geometry.fragment.glsl  deferred.geometry.vertex.glsl  deferred.light.fragment.glsl  deferred.ssao.fragment.glsl  light.fragment.glsl  light.vertex.glsl  simple.fragment.glsl  simple.vertex.glsl  sky.fragment.glsl
src/: Rect.hpp  main.cpp  utils.cpp  utils.hpp
src/audio/: AudioDevice.cpp  AudioDevice.hpp  Buffer.cpp  Buffer.hpp  Listener.cpp  Listener.hpp  Playlist.cpp  Playlist.hpp  Sound.cpp  Sound.hpp  SoundSource.cpp  SoundSource.hpp  Stream.cpp  Stream.hpp  StreamedSound.cpp  StreamedSound.hpp
src/event/: Event.cpp  Event.hpp  KeyboardEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
src/gui/: Button.cpp  Button.hpp  Frame.cpp  Frame.hpp  Input.cpp  Input.hpp  Label.cpp  Label.hpp  TextureSubrect.hpp  Theme.hpp  Widget.cpp  Widget.hpp  WidgetSkin.cpp  WidgetSkin.hpp
src/objects/: Spacecraft.cpp  Spacecraft.hpp
src/render/: FlatRenderer.cpp  FlatRenderer.hpp  Font.cpp  Font.hpp  FontPage.cpp  FontPage.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  Framebuffer.cpp  Framebuffer.hpp  Light.cpp  Light.hpp  Material.cpp  Material.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderable.cpp  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Shape2D.cpp  Shape2D.hpp  Shape3D.cpp  Shape3D.hpp  SkyRenderer.cpp  SkyRenderer.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
src/scene/: Camera.cpp  Camera.hpp  DebugScene.cpp  DebugScene.hpp  FreeCamera.cpp  FreeCamera.hpp  (+14 more)
(+23 files in other folders)
